# OS-RP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OS-RP/: CMakeCache.txt  CMakeLists.txt  Makefile  OS-RP.cpp  OS-RP.h  cmake_install.cmake
OS-RP/OS-RP/: Makefile  OS-RP  cmake_install.cmake  osrp.txt
OS-RP/OS-RP/discord_gamesdk_cmake/: Makefile  cmake_install.cmake
OS-RP/discord_gamesdk_cmake/: CMakeLists.txt
OS-RP/discord_gamesdk_cmake/discord_gamesdk_cmake/: Makefile
OS-RP/discord_gamesdk_cmake/lib/: discord.exp
discord_gamesdk_cmake/lib/: discord.ilk
